{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 152,
  "lineage": "77774587-0c21-2a26-aedb-0714a133b3cb",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/flooid-488720/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/northamerica-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-southeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-north2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/asia-south1/subnetworks/default"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.128.0.1",
            "id": "projects/flooid-488720/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "private_ip_google_access": false,
            "project": "flooid-488720",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/subnetworks/default"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "gateway",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/instanceGroups/gateway-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-07T23:07:44.300-08:00",
            "enable_cdn": false,
            "fingerprint": "H5Xy4ZmvCoo=",
            "generated_id": 7594709815532756655,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/healthChecks/microservices-lb-hc"
            ],
            "id": "projects/flooid-488720/global/backendServices/gateway-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "gateway-backend",
            "port_name": "http",
            "project": "flooid-488720",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/gateway-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_health_check.lb_hc_on",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        },
        {
          "index_key": "inventory",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/instanceGroups/inventory-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-07T23:07:44.320-08:00",
            "enable_cdn": false,
            "fingerprint": "R5mSAhLeOMY=",
            "generated_id": 3611998689335221935,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/healthChecks/microservices-lb-hc"
            ],
            "id": "projects/flooid-488720/global/backendServices/inventory-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "inventory-backend",
            "port_name": "http",
            "project": "flooid-488720",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/inventory-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_health_check.lb_hc_on",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        },
        {
          "index_key": "orders",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/instanceGroups/orders-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-07T23:07:44.295-08:00",
            "enable_cdn": false,
            "fingerprint": "1lnpdySkH54=",
            "generated_id": 7339738055508532911,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/healthChecks/microservices-lb-hc"
            ],
            "id": "projects/flooid-488720/global/backendServices/orders-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "orders-backend",
            "port_name": "http",
            "project": "flooid-488720",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/orders-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_health_check.lb_hc_on",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        },
        {
          "index_key": "payments",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/instanceGroups/payments-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-07T23:07:44.941-08:00",
            "enable_cdn": false,
            "fingerprint": "rv8AkMg6xdo=",
            "generated_id": 6280396445103201967,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/healthChecks/microservices-lb-hc"
            ],
            "id": "projects/flooid-488720/global/backendServices/payments-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "payments-backend",
            "port_name": "http",
            "project": "flooid-488720",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/payments-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_health_check.lb_hc_on",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        },
        {
          "index_key": "users",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/flooid-488720/regions/us-central1/instanceGroups/users-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-03-07T23:07:44.779-08:00",
            "enable_cdn": false,
            "fingerprint": "iwIc_A65vMM=",
            "generated_id": 2506226987811511983,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/healthChecks/microservices-lb-hc"
            ],
            "id": "projects/flooid-488720/global/backendServices/users-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "users-backend",
            "port_name": "http",
            "project": "flooid-488720",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/users-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_health_check.lb_hc_on",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "tomcat_fwd",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/flooid-488720/global/forwardingRules/microservices-http-fr",
            "ip_address": "35.227.223.11",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "microservices-http-fr",
            "port_range": "80-80",
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/forwardingRules/microservices-http-fr",
            "target": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/targetHttpProxies/microservices-http-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_backend_service.backend",
            "google_compute_health_check.lb_hc_on",
            "google_compute_target_http_proxy.tomcat_proxy",
            "google_compute_url_map.tomcat_map",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "tomcat_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-07T23:09:38.204-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/flooid-488720/global/targetHttpProxies/microservices-http-proxy",
            "name": "microservices-http-proxy",
            "project": "flooid-488720",
            "proxy_bind": false,
            "proxy_id": 7790633991509417565,
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/targetHttpProxies/microservices-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/urlMaps/microservices-urlmap"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_backend_service.backend",
            "google_compute_health_check.lb_hc_on",
            "google_compute_url_map.tomcat_map",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "tomcat_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-07T23:09:27.436-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/gateway-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "FEyJ2XVy5qU=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "services"
              }
            ],
            "id": "projects/flooid-488720/global/urlMaps/microservices-urlmap",
            "map_id": 4943440763003379272,
            "name": "microservices-urlmap",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/gateway-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "services",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/gateway-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/inventory/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/inventory-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/orders/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/orders-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/payments/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/payments-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/users/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/backendServices/users-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/urlMaps/microservices-urlmap",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc",
            "data.google_compute_subnetwork.subnet",
            "google_compute_backend_service.backend",
            "google_compute_health_check.lb_hc_on",
            "module.mig.google_compute_firewall.allow_tomcat_8080",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_instance_template.tpl",
            "module.mig.google_compute_region_autoscaler.as",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.mig[\"gateway\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tomcat_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T23:05:29.386-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flooid-488720/global/firewalls/gateway-allow-8080",
            "log_config": [],
            "name": "gateway-allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "priority": 1000,
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/firewalls/gateway-allow-8080",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gateway-tomcat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mig[\"inventory\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tomcat_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T23:05:40.127-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flooid-488720/global/firewalls/inventory-allow-8080",
            "log_config": [],
            "name": "inventory-allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "priority": 1000,
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/firewalls/inventory-allow-8080",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "inventory-tomcat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mig[\"orders\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tomcat_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T23:05:29.414-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flooid-488720/global/firewalls/orders-allow-8080",
            "log_config": [],
            "name": "orders-allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "priority": 1000,
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/firewalls/orders-allow-8080",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "orders-tomcat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mig[\"payments\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tomcat_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T23:05:29.414-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flooid-488720/global/firewalls/payments-allow-8080",
            "log_config": [],
            "name": "payments-allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "priority": 1000,
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/firewalls/payments-allow-8080",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "payments-tomcat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mig[\"users\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tomcat_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T23:05:29.375-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/flooid-488720/global/firewalls/users-allow-8080",
            "log_config": [],
            "name": "users-allow-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/networks/default",
            "priority": 1000,
            "project": "flooid-488720",
            "self_link": "https://www.googleapis.com/compute/v1/projects/flooid-488720/global/firewalls/users-allow-8080",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "users-tomcat"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}